2010-02-07 tzoscott
  * recipe.module: #707430 by tzoscott: fix CSS classes which were not inside recipe CSS namespace.
2010-02-07  jvandervort
  * #216171, regression fix.  Use normal INT instead of TINYINT to support postgres and 
    match up-coming drupal core.
2010-02-06  jvandervort
	* recipe.module, plugins/recipe_plaintext.info, renamed the import hook name to allow
	  for single and bulk input and output to be supported later.
	* added a description field to the recipe import menu.
	* import permission should be 'create recipes'

2010-02-06  tzoscott
	* recipe.module, recipe.admin.inc: #705382 by tzoscott: fix to move .module admin settings to own admin.inc

2010-02-05 11:52  jvandervort

	* recipe.module: #206607, regression.

2010-02-05 11:51  jvandervort

	* recipe.module: #257435, recipeML export escaping fix.

2010-02-05 11:24  jvandervort

	* recipe.module: #348733, user warning: Incorrect integer value on
	  recipe save.

2010-02-05 10:53  jvandervort

	* recipe.module: #705584, recipe preview has no ingredients listed.

2010-02-04 23:48  jvandervort

	* recipe.module: permissions fix.

2010-02-04 19:37  jvandervort

	* recipe.info, recipe.module, plugins/recipe_plaintext.info,
	  plugins/recipe_plaintext.module: modularize the import plugins.

2010-02-04 16:59  jvandervort

	* CHANGELOG.txt, README.txt, recipe.css, recipe.install,
	  recipe.module, translations/general.es.po,
	  translations/general.pot, translations/recipe.es.po,
	  translations/recipe.hu.po: Merge changes from HEAD (#668518,
	  #187332, #280056, #206607, #216171, #369313, #632036).  Begin
	  developing in DRUPAL-6--1.

2010-02-04 14:45  jvandervort

	* recipe.module: #632036 by drewish, recipe_select_nodes() has
	  query that doesn't use the index.

2010-02-04 14:34  jvandervort

	* recipe.module: #369313, search does not work on recipe pages.

2010-02-04 12:28  jvandervort

	* recipe.module: aligned ingredient columns in recipe view.

2010-02-04 11:08  jvandervort
