@@ -24,6 +24,19 @@
   cursor: help;
 }
 
+.recipe-ingredients .qty {
+  float:left;
+  text-align:right;
+  width:4em;
+}
+
+.recipe-ingredients .acronym-wrap {
+  float:left;
+  text-align:left;
+  width:2em;
+  padding-left: 0.5em;
+}
+
 #recipe_custom_yield fieldset .form-item {
   display: inline;
 }
