@@ -1475,7 +1475,7 @@ function theme_recipe_node($node, $yield_form = TRUE) {
           $ingredient->name = l($ingredient->name, 'node/'. $ingredient->link);
         }
 
-        $ingredients[] = '<div style="float:left; text-align:right; width:4em;">'. $ingredient->quantity .'</div><div style="float:left; text-align:left; width:2em; padding-left: 0.5em;"><acronym ' . drupal_attributes(array('title' => recipe_unit_name($ingredient->unit_id))) . '">' . $ingredient->abbreviation .'</acronym></div> '. $ingredient->name;
+        $ingredients[] = '<div class="qty">'. $ingredient->quantity .'</div><div class="acronym-wrap"><acronym ' . drupal_attributes(array('title' => recipe_unit_name($ingredient->unit_id))) . '">' . $ingredient->abbreviation .'</acronym></div> '. $ingredient->name;
       }
     }
   }
