@@ -1,8 +1,13 @@
 2010-02-07 tzoscott
+  * recipe.module, recipe.css: #707498 by tzoscott: get CSS styles out of module and into the recipe.css file`
+  
+2010-02-07 tzoscott
   * recipe.module: #707430 by tzoscott: fix CSS classes which were not inside recipe CSS namespace.
+
 2010-02-07  jvandervort
   * #216171, regression fix.  Use normal INT instead of TINYINT to support postgres and 
     match up-coming drupal core.
+
 2010-02-06  jvandervort
 	* recipe.module, plugins/recipe_plaintext.info, renamed the import hook name to allow
 	  for single and bulk input and output to be supported later.
